version/0.19/_sources/api/solver/_autosummary/settings/fixed_values.rst.txt
:orphan:

.. _fixed_values:

fixed_values
============

.. autoclass:: ansys.fluent.core.solver.settings_241.fixed_values.fixed_values
    :show-inheritance:

.. rubric:: Attributes

====================   ==========================

Attribute                                 Summary

====================   ==========================
:ref:`fixed <fixed>`       Specify fixed values?.

:ref:`fixes <fixes>`                Fixed Values.

====================   ==========================

.. rubric:: Included in:

==================================   =================================

Parent                                                         Summary

==================================   =================================
:ref:`fluid_child <fluid_child_1>`       'child_object_type' of fluid.

:ref:`phase_child <phase_child>`         'child_object_type' of phase.

==================================   =================================

