version/0.22/_sources/api/solver/_autosummary/settings/fixed_values.rst.txt
:orphan:

.. _fixed_values:

fixed_values
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.fixed_values.fixed_values
    :show-inheritance:

.. rubric:: Attributes

====================================================   =================================================

Attribute                                                                                        Summary

====================================================   =================================================
:ref:`enable <enable_12>`                                                    Enable/disable fixed terms.

:ref:`cylindrical_fixed_var <cylindrical_fixed_var>`       Local Coordinate System for Fixed Velocities.

:ref:`variables <variables>`                                          List of variables for fixed terms.

====================================================   =================================================

.. rubric:: Included in:

===================================   =================================

Parent                                                          Summary

===================================   =================================
:ref:`fluid_child <fluid_child_1>`        'child_object_type' of fluid.

:ref:`phase_child <phase_child>`          'child_object_type' of phase.

:ref:`solid_child <solid_child_1>`        'child_object_type' of solid.

:ref:`phase_child <phase_child_1>`        'child_object_type' of phase.

:ref:`phase_child <phase_child_31>`       'child_object_type' of phase.

:ref:`phase_child <phase_child_56>`       'child_object_type' of phase.

===================================   =================================

